--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,7 @@
+html {
+  background-color: Black;
+  text-align: center;
+}
 .title {
   font-family: Verdana;
   color: white;
@@ -12,4 +16,25 @@ h1 {
 h2 {
   font-size: 42px;
   font-weight: 300;
+}
+
+.center {
+  text-align: center;
+}
+
+.download {
+  color: Aquamarine;
+  font-size: 16px;
+  text-decoration: underline;
+}
+
+.description {
+  color: Grey;
+  font-size: 21px;
+  font-family: Verdana;
+}
+
+.copyright {
+  color: Grey;
+  text-align: right;
 }
